--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,20 @@
+html {
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.1em;
+    font-weight:500;
+}
+
+h1  {   
+    margin: 0 auto;
+    height:254px;
+    width: 883px;
+}
+
 /* TIMER OPTIONS  All timer items are here */
 #timerWrapper {
-	width:400px;
-	height:150px;
-	margin: 0 auto;
+	width:1080px;;
+	margin:0 auto;
+    margin-top:100px;
 }
 
 .score {
@@ -14,6 +26,11 @@
     float:left;
 }
 
+#countWrap {
+    width:60px;
+    float:left;
+}
+
 #countdown {
     font-family: 'Roboto', sans-serif;
     font-size:40px;
@@ -21,31 +38,77 @@
     position:relative;
     display: inline;
     width:60px;
+    float:right;
 }
 
 #scoreItems{
- display:block;
+ display:inline;
  list-style-type: none;
+ width: 330px;
+ height:64px;
+ padding-left: 0;
 }
 
 #timerItems {
+    width: 330px;
+    height:64px;
     list-style-type: none; 
-    float:left;
-    width:auto;
+    float:right;
+    display:block;
+    margin:0;
 }
 
-ul#timerItems li span i {
-    width:192px;
+ul#timerItems li i {
+    width:70px;
+     float: left;
 } 
 
 
 #meatTypes{
     float: left;
     margin-right: 50px;
+    height:64px;
+    width:192px;
+    background: url(../assets/meats3types.png);
+    background-size: cover;
 }
 
 
 
+/* GAME DIRECTIONS ITEMS */
+
+
+#gameInfo {
+    width:1080px;
+    margin:0 auto;
+}
+
+#arrowInstruction {
+    margin: 0 auto;
+    width:730px;
+    margin-bottom: 50px;
+}
+
+
+#gameInfo ul {
+    list-style-type: none;
+    display:block;
+    width: 730px;
+    height:64px;
+    padding:0;
+    margin:0 auto;
+}
+
+
+#gameInfo ul li:nth-child(1) {
+    width:192px;
+    float:left;
+    margin-right: 100px;
+}
+
+#gameInfo ul li:nth-child(2) {
+    width:700px;
+}
 /* GAME CANVAS */
 #appCanvas {
     display: block;
