--- a/css/styles.css
+++ b/css/styles.css
@@ -74,11 +74,11 @@ ul#timerItems li i {
 
 #meatTypes{
     float: left;
-    margin-right: 50px;
-    height:64px;
-    width:192px;
+    height:45px;
+    width:170px;
     background: url(../assets/meats3types.png);
-    background-size: cover;
+    background-size: 70%;
+    background-repeat: no-repeat;
 }
 
 
@@ -87,9 +87,11 @@ ul#timerItems li i {
 
 
 #gameInfo {
-    width:1080px;
-    height:300px;
+    width:1000px;
+    height:350px;
     margin:0 auto;
+    background-color: rgba(27, 20, 100, .2);
+    border-radius: 5px;
 }
 
 #arrowInstruction {
@@ -97,6 +99,7 @@ ul#timerItems li i {
     width:730px;
     margin-bottom: 50px;
     margin-top: 50px;
+    padding-top: 35px;
 }
 
 .greekTxt {
