--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,12 @@ h1  {
     width: 883px;
 }
 
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 /* TIMER OPTIONS  All timer items are here */
 #timerWrapper {
 	width:1080px;;
@@ -42,7 +48,8 @@ h1  {
 }
 
 #scoreItems{
- display:inline;
+
+  float: left;
  list-style-type: none;
  width: 330px;
  height:64px;
@@ -50,12 +57,12 @@ h1  {
 }
 
 #timerItems {
-    width: 330px;
+    
     height:64px;
-    list-style-type: none; 
-    float:right;
-    display:block;
-    margin:0;
+ 
+    float:left;
+
+   
 }
 
 ul#timerItems li i {
@@ -65,6 +72,7 @@ ul#timerItems li i {
 
 
 #meatTypes{
+    content: '';
     float: left;
     margin-right: 50px;
     height:64px;
@@ -149,3 +157,32 @@ ul#timerItems li i {
     color: rgba(255, 255, 255, 1);
     background-color: rgba(27, 20, 100, 1);
 }
+
+.volume {
+    float: left;
+    list-style-type: none
+}
+.volume li {
+
+   display: inline-block;
+}
+
+.volume div {
+    content: '';
+    height: 64px;
+    width: 64px;
+}
+
+#volUp {
+    background: url(../assets/volUp.png) no-repeat center;
+    background-size :auto ;
+}
+
+#volDown {
+    background: url(../assets/volDown.png) no-repeat center;
+    background-size :auto;
+}
+
+#mute {
+    background: url(../assets/mute.png) no-repeat center;
+    background-size :auto;
