--- a/css/styles.css
+++ b/css/styles.css
@@ -30,14 +30,27 @@ h1  {
   transform: translateY(-50%);
 }
 
-#ridiculouslyUnNecessaryWrap {
-    width:100%;
-    height:1300px;
-    background: url(../assets/floor2.jpg);
+#pillarleft {
+    float:left;
+    position:absolute;
+    top:0;
+    left:0;
+    width:249px;
+    height:1748px;
 }
 
-#wholeGameWrapper {
-  
+#pillarright {
+    float:right;
+    position:absolute;
+    top:0;
+    right:0;
+    width:249px;
+    height:1748px;
+}
+
+#arenaArea {
+    width: 1208px;
+    margin: 0 auto;
 }
 
 
@@ -198,10 +211,7 @@ ul#timerItems li i {
     height:600px;
     float:right;
 }
-#arenaArea {
-    width: 1208px;
-    margin: 0 auto;
-}
+
 
 
 /* GAME CANVAS */
@@ -223,13 +233,13 @@ ul#timerItems li i {
 
 .gameOverSuccess {
     display:block;
-    font-family: 'Roboto', sans-serif;
+    font-family: '300_trojansregular';
     font-size: 72px;
     font-weight: 700;
     color: rgba(27, 20, 100, 1);
     position: absolute;           
     top:220px;
-    left: 550px;           
+    left: 390px;           
     /* update these 2 lines to match appCanvas to keep centered */  
     width: 400px;
     height: 200px;       
